docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -180,7 +180,7 @@ import template from "./diagrams/template.svg";
 *Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенного
 кодинга.
 
-Для справки, если совсем коротко: *хакатон - разработка программы на время*
+Для справки, если совсем коротко: *хакатон - разработка программы на время*.
 
 </Notes>
 
@@ -236,10 +236,11 @@ import template from "./diagrams/template.svg";
 
 <Notes>
 
-*Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых всего два.
+*Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых всего два, и главный из них будет здесь
+рассмотрен.
 
-Главный из этих принципов будет здесь рассмотрен, после чего тревожные ожидания покинут тех, у кого они были, и многим
-наверняка захочется сразу же применить полученные знания на практике. 
+После этого тревожные ожидания покинут тех, у кого они были, и многим наверняка захочется сразу же применить полученные
+знания на практике. 
 
 </Notes>
 
