docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -166,33 +166,25 @@ import template from "./diagrams/template.svg";
 *Использование принципов Чистой Архитектуры способствует созданию такой программной системы, которую будет легко
 поддерживать и расширять в течение долгого времени.*
 
-Пользовательский интерфейс стартера реализован на *React*, но понимания того, о чём здесь будет говориться, знания
+Пользовательский интерфейс стартера реализован на *React*, но для понимания того, о чём здесь будет говориться, знания
 *React* не требуется.   
 
 </Notes>
 
 ---
 
-# Disclaimer
+<p style="font-size: 100px; text-align:center; padding-bottom:80px;">
+<i>Чистая Архитектура</i>
+<br/> 
+и производительность
+</p>
 
 <Notes>
 
-*Чистая Архитектура* не является серебряной пулей, она вряд ли подойдёт любителям хакатонов и рыцарям наколенного
-кодинга.
+Как ни парадоксально, но по большому счёту главная тема *Чистой Архитектуры* это производительность.
 
-Для справки, если совсем коротко: *хакатон - разработка программы на время*.
-
-</Notes>
-
----
-
-# Что с производительностью ?
-
-<Notes>
-
-С производительностью всё замечательно.
-
-Но важно правильно выбирать условия её измерения и очень важно избегать некорректных сравнений.
+Но при этом нужно понимать, какую производительность мы измеряем, правильно выбирать условия её измерения и очень важно
+избегать некорректных сравнений.
 
 ...
 </Notes>
@@ -204,10 +196,14 @@ import template from "./diagrams/template.svg";
 <Notes>
 ...
 
-Например, сравнивать скорость системы, разработанной на хакатоне и системы, разработанной на принципах *Чистой
-Архитектуры* - всё равно что сравнивать скорость велосипеда и поезда при старте с места.
+Например, сравнивать скорость разработки на хакатоне и разработки на принципах *Чистой Архитектуры* - всё равно что
+сравнивать скорость спринтера и стайера, велосипеда и поезда.
 
-Велосипед, конечно, выиграет на дистанции 100 метров. Выиграет и на 200, на 1000.
+*Хакатон*, если кто не знает, это своего рода спорт для программистов, предполагающий разработку программного решения в
+условиях ограниченного времени, обычно в пределах одной-двух недель. Вот только его неправильно называют *хакерским
+марафоном*, конечно, это не марафон, а спринт.
+
+Так вот, при старте с места велосипед, конечно, выиграет у поезда на дистанции 100 метров. Выиграет и на 200, и на 1000.
 
 Но уже на 10 км у велосипеда просто не будет никаких шансов.
 
@@ -217,12 +213,14 @@ import template from "./diagrams/template.svg";
 ---
 <Image src={bicycleVsTrain} style={{ width: '60vw', height: '70vh'}}/>
 
-*Чистая Архитектура* нужна тем, кто собирается "играть в долгую".
+*Чистая Архитектура* предназначена для "игры в долгую"
 
 <Notes>
 ...
 
-*Чистая Архитектура* нужна тем, кто собирается "играть в долгую".
+*Чистая Архитектура* предназначена для серьёзных масштабируемых post-MVP-решений, когда начинается "игра в долгую".
+
+*Чистая Архитектура* повышает скорость стайера, она масштабирует скорость разработки на длинных дистанциях.
 
 При игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
 масштаб, тем больше правила *Чистой Архитектуры* начинают выигрывать - вначале в скорости разработки, затем - в скорости
@@ -545,8 +543,6 @@ Adapters*.
 
 На этом месте стоит сделать небольшое отступление для того, чтобы напомнить, в чём состоит *Правило Зависимостей*, и для
 чего оно нужно.
-
-В *Чистой Архитектуре* *Правило Зависимостей* занимает, пожалуй, центральное место.
 
 ...
 </Notes>
