docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -554,8 +554,9 @@ Adapters*.
 <Notes>
 ...
 
-На диаграммах оно обычно изображается стрелками, показывающими направление зависимостей: от инфраструктурной периферии -
-к смысловому центру, которым всегда является бизнес-логика (на картинке - *Entities* + *Use Cases*). 
+На диаграммах *Правило Зависимостей* обычно изображается стрелками, показывающими направление зависимостей: от
+инфраструктурной периферии - к смысловому центру, которым всегда является бизнес-логика (на картинке - *Entities* + *Use
+Cases*). 
 
 Во избежание недоразумений необходимо уточнить, что под зависимостями в данном случае подразумеваются только
 *зависимости времени разработки* - *design-time*-зависимости.
@@ -578,13 +579,6 @@ Adapters*.
 
 Именно это правило в наибольшей степени придаёт системе живучесть и устойчивость к изменениям в долгосрочном периоде.
 
-Возможно, кто-то скажет, что *Правило Зависимостей*, мол, очевидно, банально, что он и так всегда его соблюдал - такие
-всегда находятся, кстати, именно среди хороших программистов.
-
-Но практика показывает, что на самом деле это не так, таких опытных разработчиков с хорошей интуицией - единицы, а
-постоянное нарушение этого правила, низкая культура работы с зависимостями пока ещё является нашей повседневной
-реальностью.
-
 </Notes>
 
 ---
@@ -593,8 +587,8 @@ Adapters*.
 
 <Notes>
 
-*Чистая Архитектура* никак не регламентирует ни названия, ни число слоёв. На оригинальной диаграмме показан просто самый
-типовой пример, который и нужно воспринимать как пример, не более того.
+*Чистая Архитектура* никак не регламентирует ни названия слоёв, ни их число. На оригинальной диаграмме показан просто
+самый типовой пример, который и нужно воспринимать как пример, не более того.
 
 Но в любой системе всегда есть две составляющие: модель предметной области - *Domain* и  инфраструктура -
 *Infrastructure*. 
