docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -587,18 +587,14 @@ Cases*).
 
 <Notes>
 
-*Чистая Архитектура* никак не регламентирует ни названия слоёв, ни их число. На оригинальной диаграмме показан просто
-самый типовой пример, который и нужно воспринимать как пример, не более того.
+*Чистая Архитектура* никак не регламентирует ни названия слоёв, ни их число. Те, слои, которые обычно показывают на
+диаграммах, иллюстрируют просто самый типовой пример, не более того.
 
 Но в любой системе всегда есть две составляющие: модель предметной области - *Domain* и  инфраструктура -
 *Infrastructure*. 
 
 Задача "чистого" архитектора заключается в том, чтобы *Domain* и *Infrastructure* декомпозировать на слои,
 соответствующие решаемой задаче. 
-
-*Правило зависимостей* заставляет разработчика с самого начала думать о важных вещах: о том, где и как провести границу
-между сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и инфраструктурой, которая,
-как раз, и состоит из библиотек, фреймворков и баз данных.
 
 </Notes>
 
@@ -607,7 +603,10 @@ Cases*).
 <Image src={caLayersAbstract} style={{ width: '102vw', height: '100vh'}}/>
 
 <Notes>
-...
+
+*Правило зависимостей* заставляет разработчика с самого начала думать о важных вещах: о том, где и как провести границу
+между сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и инфраструктурой,
+включающей библиотеки, фреймворки, базы данных и т.п.
 
 При этом свойства, соотношения значимости этих свойств в каждой конкретной системе могут быть свои, и, в первую очередь,
 эти соотношения должны отвечать задачам, которую эта система решает.
