docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -590,11 +590,9 @@ Cases*).
 *Чистая Архитектура* никак не регламентирует ни названия слоёв, ни их число. Те, слои, которые обычно показывают на
 диаграммах, иллюстрируют просто самый типовой пример, не более того.
 
-Но в любой системе всегда есть две составляющие: модель предметной области - *Domain* и  инфраструктура -
-*Infrastructure*. 
+Но в любой системе всегда есть две составляющие: модель предметной области и инфраструктура.
 
-Задача "чистого" архитектора заключается в том, чтобы *Domain* и *Infrastructure* декомпозировать на слои,
-соответствующие решаемой задаче. 
+Искусство "чистого" архитектора заключается в декомпозиции этих составляющих на слои, соответствующие решаемой задаче. 
 
 </Notes>
 
@@ -604,9 +602,9 @@ Cases*).
 
 <Notes>
 
-*Правило зависимостей* заставляет разработчика с самого начала думать о важных вещах: о том, где и как провести границу
-между сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и инфраструктурой,
-включающей библиотеки, фреймворки, базы данных и т.п.
+*Правило зависимостей* с самого начала заставляет думать о важных вещах: о том, где и как провести границу между
+сущностями предметной области и сценариями бизнес-логики, между бизнес-логикой продукта и инфраструктурой, включающей
+библиотеки, фреймворки, базы данных и т.п.
 
 При этом свойства, соотношения значимости этих свойств в каждой конкретной системе могут быть свои, и, в первую очередь,
 эти соотношения должны отвечать задачам, которую эта система решает.
@@ -625,8 +623,6 @@ Cases*).
 Зависимостей*.
 
 Начнём с UML-диаграмм.
-
-Код тоже скоро будет, он становится всё ближе.
 
 </Notes>
 
