docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -619,7 +619,7 @@ Cases*).
 
 <Notes>
 
-Дальнейшее изложение посвящено разбору стартера, а именно тому, как в нём обеспечивается соблюдение *Правила
+Дальнейшее изложение посвящено разбору конкретного приложения - тому, как нём обеспечивается соблюдение *Правила
 Зависимостей*.
 
 Начнём с UML-диаграмм.
