docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -615,7 +615,8 @@ Cases*).
 </Notes>
 
 ---
-# Наконец, переходим к стартеру
+
+# А если конкретно ? 
 
 <Notes>
 
@@ -856,7 +857,7 @@ Cases*).
     Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв.
     <br/>
     При этом он импортирует из модулей внутренних слоёв и может импортировать из модулей своего слоя.
-    <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Правило Зависимостей в терминах языка программирования</i></p>
+    <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Правило Зависимостей на языке программирования</i></p>
 </p>
 
 <Notes>
