docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -901,19 +901,19 @@ Cases*).
 Рассмотрим модуль *CounterIncrement*, находящийся в директории-слое *usecases*.
 
 Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя *entities*.
-С точки зрения *Правила Зависимостей* всё правильно: внешний слой *usecases* импортирует из внутреннего - *entities*. 
+С точки зрения *Правила Зависимостей* всё правильно: внешний слой *usecases* импортирует из внутреннего - из *entities*. 
 
 ->
 
 В начале модуля размещены определения его *входного* и *выходного* интерфейсов, названных, соответственно,
 *CounterIncrementIn* и *CounterIncrementOut*.
 
-Оба этих интерфейса экспортируются, чтобы быть импортированы из слоя адаптеров - *adapters*.
+Оба этих интерфейса экспортируются, чтобы быть импортированы из слоя адаптеров: входной - из презентера, выходной - из
+шлюза.
 
-Стоит отметить, что интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для адаптера-шлюза
-доступа к внешнему сервису, к рассмотрению которого мы немедленно переходим
+Интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для шлюза доступа к внешнему сервису, к
+рассмотрению которого сейчас переходим.
 
-...
 </Notes>
 
 ---
@@ -942,36 +942,17 @@ Cases*).
 </CodeSurferColumns>
 
 <Notes>
-...
 
 Модуль шлюза *CounterIncrementRestGateway* находится в слое *adapters*.
 
 В его первой строке, как и в только что рассмотренном *CounterIncrement* импортируется класс *Counter* из слоя сущностей.
-В данном случае это пример, когда импорт выполняется хоть из внутреннего, но не из соседнего слоя, то есть импорт
+В данном случае это пример, когда импорт выполняется хоть и из внутреннего, но не из соседнего слоя, то есть импорт
 перескакивает через слой. Оставим это здесь без комментариев.
 
 ->
 
 Во второй строке импортируется *выходной* и вдобавок *требуемый* интерфейс модуля с предыдущего слайда -
 *CounterIncrement*, являющегося *входным* для шлюза *CounterIncrementRestGateway*, который его благополучно реализует.
-
-С точки зрения *Правила Зависимостей* всё правильно: внешний слой *usecases* импортирует из внутреннего - *entities*. 
-
-->
-
-В начале модуля размещены определения его *входного* и *выходного* интерфейсов, названных, соответственно,
-*CounterIncrementIn* и *CounterIncrementOut*.
-
-Оба этих интерфейса экспортируются, чтобы быть импортированы из слоя адаптеров - *adapters*.
-
-Стоит отметить, что интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для адаптера-шлюза
-доступа к внешнему сервису.
-
-->
-
-Далее размещается реализация входного интерфейса, по сути - реализация модуля.
-
-Но для *Правила Зависимостей* реализации не имеют значения, поэтому здесь их не рассматриваем.
 
 </Notes>
 
