docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -945,8 +945,10 @@ Cases*).
 
 Модуль шлюза *CounterIncrementRestGateway* находится в слое *adapters*.
 
-В его первой строке, как и в только что рассмотренном *CounterIncrement* импортируется класс *Counter* из слоя сущностей.
-В данном случае это пример, когда импорт выполняется хоть и из внутреннего, но не из соседнего слоя, то есть импорт
+В его первой строке, как и в только что рассмотренном *CounterIncrement*, импортируется класс *Counter* из слоя
+сущностей.
+
+В данном случае это пример того, когда импорт выполняется хоть и из внутреннего, но не из соседнего слоя, то есть импорт
 перескакивает через слой. Оставим это здесь без комментариев.
 
 ->
