docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -948,8 +948,10 @@ Cases*).
 В его первой строке, как и в только что рассмотренном *CounterIncrement*, импортируется класс *Counter* из слоя
 сущностей.
 
-В данном случае это пример того, когда импорт выполняется хоть и из внутреннего, но не из соседнего слоя, то есть импорт
-перескакивает через слой. Оставим это здесь без комментариев.
+Здесь можно обратить внимание на то, что импорт выполняется модулем шлюза хоть и из внутреннего, но не из соседнего
+слоя, перескакивая через слой *usecases*. Это проявление того, все слои бизнес-логики рассматриваются адаптерами как
+единое целое - *Domain*.
+Будем считать это нормой.
 
 ->
 
