--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -233,7 +233,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 Ключевые свойства стартера:
 
-...
+... 
 </Notes>
 
 ---
@@ -242,14 +242,15 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-*Чистая Архитектура* - главное, для чего создавался стартер.
+*Чистая Архитектура* - главное, для чего создавалось это приложение-стартер.
 
-Но из всего множества правил *Чистой Архитектуры* в этой презентации  Будет рассмотрено только *Правило Зависимостей*,
-базирующееся на *Принципе Инверсии Зависимостей*, поэтому всё, что будет здесь сказано, в полной мере можно будет
-отнести и к *Гексагональной Архитектуре*, и к *Луковой*.
+Но из всего множества правил *Чистой Архитектуры* в этой презентации будет рассмотрено только *Правило Зависимостей*,
+хотя оно не изобретение *Чистой Архитектуры*. По сути оно присутствовало и в [*Гексагональной
+Архитектуре*](https://fideloper.com/hexagonal-architecture), и в
+[*Луковой*](https://www.thinktocode.com/2018/08/16/onion-architecture/).
 
-В общих чертах стартер отражает актуальный взгляд автора (не исключено, что он может измениться) на то, каким должно
-быть frontend-приложение, разрабатываемое на принципах *Чистой Архитектуры*.
+В общих чертах стартер отражает актуальный взгляд автора на то, каким примерно должно быть frontend-приложение,
+разрабатываемое на принципах *Чистой Архитектуры*.
 
 </Notes>
 
