refactor: removal of excess

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -275,9 +275,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-Стартер написан на *TypeScript*.
-
-Выбор *TypeScript* также обусловлен его популярностью.
+Код написан на *TypeScript*, что также обусловлено его популярностью этого языка.
 
 *TypeScript* уже давно имеет многочисленных сторонников среди frontend-разработчиков, а последнее время начинает
 завоёвывать позиции уже и на backend.
