docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -360,15 +360,15 @@ Substitution Principle*, для применения которого необх
 <Notes>
 
 Притом что и в этой презентации, и в коде самого стартера используются термины, вполне традиционные для *Чистой
-Архитектуры*, они будут непривычны для тех, кто только начинает знакомиться с этой областью, поэтому они нуждаются в
+Архитектуры*, они могут быть непривычны для тех, кто только начинает знакомиться с этой областью, поэтому нуждаются в
 отдельных пояснениях.
 
 Прекрасный разбор терминов и понятий *Чистой Архитектуры*, разрешающий ряд недоразумений, сделан в работе [*Заблуждения
 Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 Перед тем, как перейти к дальнейшему изложению, не погружаясь глубоко в детали и воспользовавшись результатами этой
-работы, оставим здесь только то, что необходимо для дальнейшего изложения в виде краткого словаря используемых терминов,
-каждый из которых будет снабжён соответствующими пояснениями.
+работы, оставим здесь только то, что необходимо для дальнейшего изложения в виде краткого словаря используемых терминов.
+Каждый из этих терминов будет снабжён соответствующими пояснениями.
 
 </Notes>
 
