test: push to Vercel

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -126,7 +126,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 ---
 
 <p style="font-size: 100px; text-align:center; padding-bottom:80px;">
-На кого рассчитана презентация
+Для кого эта презентация ?
 </p>
 
 <Notes>
