feat: rollback change deck

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -56,7 +56,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 ---
 
-# Как смотреть эту презентацию ?
+# Как смотреть эту презентацию
 
 <Notes>
 
