--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -181,7 +181,8 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 *Хакатон*, если кто не знает, это своего рода спорт для программистов, предполагающий разработку программного решения в
 условиях ограниченного времени, обычно в пределах одной-двух недель. Вот только его неправильно называют *хакерским
-марафоном*. Это не марафон, конечно, а спринт.
+марафоном*. Для такого вида деятельности, как написание программы, две недели это не марафон, конечно, а в чистом виде
+спринт.
 
 Так вот, при старте с места велосипед без вопросов выиграет у поезда на дистанции 100 метров. Выиграет и на 200, и на
 1000.
