docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -176,8 +176,8 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 <Notes>
 ...
 
-Например, сравнивать скорость разработки на хакатоне и разработки на принципах *Чистой Архитектуры* - всё равно что
-сравнивать скорость спринтера и стайера, велосипеда и поезда.
+Например, сравнивать скорость разработки на хакатоне (пояснение чуть ниже) и разработки на принципах
+*Чистой Архитектуры* - всё равно что сравнивать скорость спринтера и стайера, велосипеда и поезда.
 
 *Хакатон*, если кто не знает, это своего рода спорт для программистов, предполагающий разработку программного решения в
 условиях ограниченного времени, обычно в пределах одной-двух недель. Вот только его неправильно называют *хакерским
