--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -179,10 +179,11 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 Например, сравнивать скорость разработки на хакатоне (пояснение чуть ниже) и разработки на принципах
 *Чистой Архитектуры* - всё равно что сравнивать скорость спринтера и стайера, велосипеда и поезда.
 
-*Хакатон*, если кто не знает, это своего рода спорт для программистов, предполагающий разработку программного решения в
-условиях ограниченного времени, обычно в пределах одной-двух недель. Вот только его неправильно называют *хакерским
-марафоном*. Для такого вида деятельности, как написание программы, две недели это не марафон, конечно, а в чистом виде
-спринт.
+*Хакатон* (сокращённо - *хакерский марафон*), если кто не знает, это своего рода спорт для программистов, предполагающий
+разработку программного решения в условиях ограниченного времени, обычно в пределах одной-двух недель.
+
+Вот только у хакатона неправильное название. Для написания хоть сколько нибудь серьёзной программы, две недели это не
+марафон, конечно, а в чистом виде спринт.
 
 Так вот, при старте с места велосипед без вопросов выиграет у поезда на дистанции 100 метров. Выиграет и на 200, и на
 1000.
