docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -176,17 +176,18 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 <Notes>
 ...
 
-Например, сравнивать скорость разработки на хакатоне (пояснение чуть ниже) и разработки на принципах
-*Чистой Архитектуры* - всё равно что сравнивать скорость спринтера и стайера, велосипеда и поезда.
+Вот, например, есть такой спорт для программистов, называется *хакатон* (сокращённо - *хакерский марафон*).
 
-*Хакатон* (сокращённо - *хакерский марафон*), если кто не знает, это своего рода спорт для программистов, предполагающий
-разработку программного решения в условиях ограниченного времени, обычно в пределах одной-двух недель.
+Его суть состоит в том, что в условиях ограниченного времени, обычно в пределах одной-двух недель, разрабатывается
+программа, решающая какую-то проблему.
 
 Вот только у хакатона неправильное название. Для написания хоть сколько-нибудь серьёзной программы, две недели это не
 марафон, конечно, а в чистом виде спринт.
 
-Так вот, при старте с места велосипед без вопросов выиграет у поезда на дистанции 100 метров. Выиграет и на 200, и на
-1000.
+Так вот сравнивать скорость разработки на хакатоне и скорость разработки на принципах *Чистой Архитектуры* это всё равно
+что сравнивать скорость спринтера и стайера, велосипеда и поезда.
+
+При старте с места велосипед без вопросов выиграет у поезда на дистанции 100 метров. Выиграет и на 200, и на 1000.
 
 Но уже на 10 км у велосипеда просто не будет никаких шансов.
 
