docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -187,7 +187,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 Так вот сравнивать скорость разработки на хакатоне и скорость разработки на принципах *Чистой Архитектуры* это всё равно
 что сравнивать скорость спринтера и стайера, велосипеда и поезда.
 
-При старте с места велосипед без вопросов выиграет у поезда на дистанции 100 метров. Выиграет и на 200, и на 1000.
+При старте с места велосипед без вопросов выиграет у поезда на дистанции 100 метров. Выиграет и на 200 метров, и на 1000.
 
 Но уже на 10 км у велосипеда просто не будет никаких шансов.
 
