--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -221,9 +221,6 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 *Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых всего два, и главный из них будет здесь
 рассмотрен.
 
-После этого тревожные ожидания покинут тех, у кого они были, и многим наверняка захочется сразу же применить полученные
-знания на практике. 
-
 </Notes>
 
 ---
@@ -248,7 +245,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 *Чистая Архитектура* - главное, для чего создавалось это приложение-стартер.
 
 Но из всего множества правил *Чистой Архитектуры* в этой презентации будет рассмотрено только *Правило Зависимостей*,
-хотя оно не изобретение *Чистой Архитектуры*. По сути оно присутствовало и в [*Гексагональной
+хотя оно не является изобретением *Чистой Архитектуры*. По сути оно присутствовало и в [*Гексагональной
 Архитектуре*](https://fideloper.com/hexagonal-architecture), и в
 [*Луковой*](https://www.thinktocode.com/2018/08/16/onion-architecture/).
 
@@ -278,7 +275,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-Код написан на *TypeScript*, что также обусловлено его популярностью этого языка.
+Код написан на *TypeScript*, что также обусловлено популярностью этого языка.
 
 *TypeScript* уже давно имеет многочисленных сторонников среди frontend-разработчиков, а последнее время начинает
 завоёвывать позиции уже и на backend.
