docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -146,8 +146,8 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 *Использование принципов Чистой Архитектуры способствует созданию такой программной системы, которую будет легко
 поддерживать и расширять в течение долгого времени.*
 
-Пользовательский интерфейс стартера реализован на *React*, но для понимания того, о чём здесь будет говориться, знания
-*React* не требуется.   
+Несмотря на то, что пользовательский интерфейс стартера реализован на *React*, для понимания того, о чём здесь будет
+говориться, знания *React* не потребуются.   
 
 </Notes>
 
@@ -521,6 +521,8 @@ Adapters*.
 
 <Notes>
 ...
+
+Далее речь пойдёт уже о т*Правиле Зависимостей*, поэтому
 
 На этом месте стоит сделать небольшое отступление для того, чтобы напомнить, в чём состоит *Правило Зависимостей*, и для
 чего оно нужно.
