--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1036,6 +1036,25 @@ Cases*).
 
 ---
 
+# Что дальше ?
+
+<Notes>
+
+Конечно, на функциональности счётчика для web-платформы можно показать, каким должен быть самый старт разработки, чтобы
+с самого начала не лишиться перспектив на развитие, но этого слишком мало для того, чтобы преимущества *Чистой
+Архитектуры* успели проявиться.
+
+Напомним, что разработка на принципах *Чистая Архитектура* используется при игре в долгую. Преимущества *Чистой
+Архитектуры* по-настоящему проявляются не на старте разработки, а в ходе развития системы.
+
+Поэтому в продолжение этой презентации запланировано ещё несколько примерно таких же, на первой из которых
+предполагается продемонстрировать развитие показанного здесь решения для мобильных платформ, конкретно - на *React
+Native*. 
+
+</Notes>
+
+---
+
 # На этом пока всё
 
 ---
@@ -1058,62 +1077,3 @@ Cases*).
 
 - [Презентация *О Принципе Инверсии Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh)
 - [*Заблуждения Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/)
-
----
-
-<CodeSurferColumns themes={[naiveTheme, myTheme]}>
-
-<Step>
-
-<Image src={counterResetModule} style={{ width: '100vw', height: '100vh'}}/>
-
-```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
-```
-
-</Step>
-
-</CodeSurferColumns>
-
-
-<Notes>
-...
-
-То же самое - для модуля *CounterReset*
-
-</Notes>
-
----
-
-<CodeSurferColumns themes={[myTheme, myTheme, myTheme]}>
-
-<Step>
-
-```ts 1,3:6 file=../../src/adapters/presenters/useResetPresenter.ts title="useResetPresenter"
-```
-
-```ts 1:3,5:10 file=../../src/domain/usecases/CounterReset.ts title="CounterReset"
-```
-
-```ts 1,4 file=../../src/adapters/gateways/CounterResetRestGateway.ts title="CounterResetRestGateway"
-```
-
-</Step>
-
-</CodeSurferColumns>
-
-
-<Notes>
-
-В качестве примера приведём код *CounterReset* - модуля бизнес-логики - из слоя *usecases*.
-
-В начале модуля размещены определения *входного* и *выходного* интерфейсов модуля, названных, соответственно,
-*CounterResetIn* и *CounterResetOut*.
-
-Стоит отметить, что интерфейс *CounterResetOut* является *требуемым* (*required*) интерфейсом для адаптера из соседнего
-внешнего слоя.
-
-...
-
-Далее - за объявлением интерфейсов размещается реализация входного интерфейса, по сути - реализация модуля.
-
-</Notes>
