docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1047,9 +1047,8 @@ Cases*).
 Напомним, что разработка на принципах *Чистая Архитектура* используется при игре в долгую. Преимущества *Чистой
 Архитектуры* по-настоящему проявляются не на старте разработки, а в ходе развития системы.
 
-Поэтому в продолжение этой презентации запланировано ещё несколько примерно таких же, на первой из которых
-предполагается продемонстрировать развитие показанного здесь решения для мобильных платформ, конкретно - на *React
-Native*. 
+Поэтому в продолжение этой презентации запланировано ещё несколько, на первой из которых предполагается демонстрация
+развития показанного здесь решения для мобильных платформ, конкретно - на *React Native*. 
 
 </Notes>
 
