docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -111,15 +111,19 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-Это первая из серии презентаций о стартере для клиентских приложений, разрабатываемых на принципах *Чистой Архитектуры*.
+Это первая и, хочется надеяться, не последняя из серии презентаций о применении принципов *Чистой Архитектуре* во
+фронтенд-разработке.
 
-Предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это обычный счётчик с функциями
-инкремента и сброса. Но при всей своей минималистичности стартер представлен fullstack-решением, в котором клиентская
-часть взаимодействует с persistence-сервисом (назовём это так) по REST API и имеет несколько аспектов, требующих
-отдельного рассмотрения.
+Конечно, было бы неплохо сначала рассказать о том, как *Чистая Архитектура* пришла во фронтенд, какое место она занимает
+там сегодня, и каковы дальнейшие перспективы. Но, как говорится, пока есть к чему стремиться.
+ 
+Разговор пойдёт вокруг клиентского приложения - стартера, предметная область и, соответственно, бизнес-логика которого
+предельно минималистичны - это обычный счётчик с функциями инкремента и сброса.
+Но при всей своей минималистичности стартер представлен fullstack-решением, в котором клиентская часть взаимодействует
+с persistence-сервисом (назовём это так) по REST API и имеет несколько аспектов, требующих отдельного рассмотрения.
  
 В этой презентации главное внимание уделяется *Правилу Зависимостей* *Чистой Архитектуры*, в частности, тому, как оно
-может быть представлены в программном коде, в данном случае - на *TypeScript*. 
+может быть представлено в программном коде, в данном случае - на *TypeScript*. 
 
 </Notes>
 
