docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -120,7 +120,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 Разговор пойдёт вокруг клиентского приложения - стартера, предметная область и, соответственно, бизнес-логика которого
 предельно минималистичны - это обычный счётчик с функциями инкремента и сброса.
 Но при всей своей минималистичности стартер представлен fullstack-решением, в котором клиентская часть взаимодействует
-с persistence-сервисом (назовём это так) по REST API и имеет несколько аспектов, требующих отдельного рассмотрения.
+с внешним сервисом по REST API и имеет несколько аспектов, требующих отдельного рассмотрения.
  
 В этой презентации главное внимание уделяется *Правилу Зависимостей* *Чистой Архитектуры*, в частности, тому, как оно
 может быть представлено в программном коде, в данном случае - на *TypeScript*. 
@@ -137,11 +137,8 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 На кого рассчитана презентация, какова её целевая аудитория ?
 
-От аудитории не требуется наличия предварительных знаний ни о *Чистой Архитектуре*, ни о *Правиле Зависимостей*. 
-
-Хотя, конечно, присутствие хотя бы минимального понимания существа проблем, решаемых *Чистой Архитектурой* будет
-полезным.
-
+От аудитории не требуется наличия каких-либо предварительных знаний о *Чистой Архитектуре* и *Правиле Зависимостей*. 
+Хотя, конечно, присутствие хотя бы минимального понимания существа проблем ими решаемых будет полезным.
 Полезным будет также и знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
@@ -170,7 +167,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 При этом, конечно, нужно понимать, какую производительность мы измеряем, правильно выбирать условия её измерения и очень важно
 избегать некорректных сравнений.
 
-Вот, например, есть такой спорт для программистов, называется *хакатон* (сокращённо - *хакерский марафон*).
+Вот, например, есть такой вид спорта для программистов, называется *хакатон* (сокращение от *хакерский марафон*).
 
 Его суть состоит в том, что в условиях ограниченного времени, обычно в пределах одной-двух недель, разрабатывается
 программа, решающая какую-то проблему.
@@ -206,9 +203,10 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 <Notes>
 ...
 
-*Чистая Архитектура* предназначена для серьёзных масштабируемых post-MVP-решений, когда начинается "игра в долгую".
+*Чистая Архитектура* предназначена для масштабируемых post-MVP-решений, которым требуется серьёзная "игра в долгую".
 
-*Чистая Архитектура* повышает скорость не спринтера, а стайера, масштабируя скорость разработки на длинных дистанциях.
+*Чистая Архитектура* повышает скорость не программиста-спринтера, а программиста-стайера, масштабируя скорость его
+разработки на длинных дистанциях.
 
 При игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
 масштаб, тем больше правила *Чистой Архитектуры* начинают выигрывать - вначале в скорости разработки, затем - в скорости
@@ -222,7 +220,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-*Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых всего два, и главный из них будет здесь
+*Чистая Архитектура* это очень просто. Из всех её принципов наиболее значимых два, и главный из них будет здесь
 рассмотрен.
 
 </Notes>
