docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -244,7 +244,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-*Чистая Архитектура* - главное, для чего создавалось это приложение-стартер.
+*Чистая Архитектура* - главное, для чего создавался рассматриваемый здесь стартер.
 
 Но из всего множества правил *Чистой Архитектуры* в этой презентации будет рассмотрено только *Правило Зависимостей*,
 хотя оно не является изобретением *Чистой Архитектуры*. По сути оно присутствовало и в [*Гексагональной
