docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -246,9 +246,9 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 *Чистая Архитектура* - главное, для чего создавался рассматриваемый здесь стартер.
 
-Но из всего множества правил *Чистой Архитектуры* в этой презентации будет рассмотрено только *Правило Зависимостей*,
-хотя оно не является изобретением *Чистой Архитектуры*. По сути оно присутствовало и в [*Гексагональной
-Архитектуре*](https://fideloper.com/hexagonal-architecture), и в
+Но из всех правил *Чистой Архитектуры* в этой презентации будет рассмотрено только *Правило Зависимостей*, про которое,
+кстати, стоит заметить, что само по себе оно не является изобретением *Чистой Архитектуры*. По сути *Правило
+Зависимостей* присутствовало и в [*Гексагональной Архитектуре*](https://fideloper.com/hexagonal-architecture),и в
 [*Луковой*](https://www.thinktocode.com/2018/08/16/onion-architecture/).
 
 В общих чертах стартер отражает актуальный взгляд автора на то, каким примерно должно быть frontend-приложение,
@@ -263,7 +263,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-В качестве UI-фреймворка используется *React*.
+Как уже отмечалось, в качестве UI-фреймворка используется *React*.
 
 На это несколько причин, не самая последняя из которых - популярность фреймворка среди разработчиков.
 
